--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,9 +56,11 @@ html::-webkit-scrollbar-thumb {
 
 }
 
-section{
+  .header a{
 
-    padding: 5rem 10%;
+     margin-top: 1%;
+     margin-left: 5%;
+     
 
 }
 
@@ -70,6 +72,7 @@ section{
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
+    margin-top: 5%;
     
 }
 
@@ -136,10 +139,12 @@ section{
 
 }
 
-.header .navbar a{
+.navbar{margin-right: 5%;}
+
+  .navbar a{
 
     font-size: 2rem;
-    margin-left: 2rem;
+    margin-left: 2.5rem;
     color:var(--light-black);
 
 }
@@ -163,9 +168,10 @@ section{
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: center;
-            width: 80vw;
+            width: 100vw;
             padding: 12px;
-        margin: 12px;}
+            margin-top: 72px;
+        gap: 180px; }
 
 a .chapter-container{text-decoration: none;
                         color: #222;}
@@ -177,8 +183,8 @@ a .chapter-container{text-decoration: none;
     flex-direction:row;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 24px;
-    margin: 96px;
+    margin-top: 72px;
+     
      
      }
 
@@ -642,6 +648,5 @@ a .chapter-container{text-decoration: none;
     }
 
 }
-
 
 
