--- a/Capitulo-1/CSS/style.css
+++ b/Capitulo-1/CSS/style.css
@@ -177,9 +177,9 @@ p {
           font-weight: 700;
          
          text-align: center;
+        }
 
 
-}
 
 .map-2 img{width: 40vw;
             margin: 96px;}
@@ -281,304 +281,71 @@ p {
 
 }
 
-.main-chapters {display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: center;
-            width: 80vw;
-            padding: 12px;
-        margin: 12px;}
-
-             
-.chapter-container  {
-    width: 400px;
-    height: 400px;
-    display: flex;
-    flex-direction:row;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 24px;
-    margin: 96px;
-     
-     }
-
-.chapter-images img{width: 400px;
-                height: 400px;
-                object-fit: cover;
-               }
-               
-
-
-              
-
- img {
-    width: 400px;
-}
-
-.chapter-number-container{
-    display: flex;
-    flex-direction: column;
-    padding: 12px;
-   align-items: center;
-    font-size: 24px;
-    text-align: center
-}
-
-.chapter-number-container :hover{
-    background-color: #e8e8e8;
-    transition: 0.4s;
-  }
-
  
+@media (max-width: 650px) {
+    /* Estilos CSS que se aplicarán cuando el ancho de la pantalla
+       (o el viewport) sea de 1000 píxeles o más */
+  
+    body {
+      width: 100%; 
+      
+       }
 
-.image img{border-radius: 3%;
-            border: 2px solid rgb(223, 223, 223);
-            
-        padding: 18px;}
-
-        .chapter-subtittle{
-            font-size: 18px;
-        }
-
-@keyframes fadeIn{
-
-    0%{
-        transform: translateY(-4rem) scale(0);
-        opacity: 0;
+       .content{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 12px;
     }
 
-}
-
-.home{
-    padding: 0;
-    background: var(--black);
-}
-
-.home .slide{
-
-    min-height: 100vh;
-    background-size: cover !important;
-    background-position: center !important;
-    position: relative;
-    z-index: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-}
-
-.home .slide::before{
-
-    content:'';
-    position: absolute;
-    top:0;
-    left:0;
-    height: 100%;
-    width: 100%;
-    background: var(--dark-bg);
-    z-index:-1;
-}
-
-.home .slide .content{
-
-    text-align: center;
-    width: 70rem;
-    display: none;
-
-}
-
-.home .slide .content span{
-
-    font-size: 3rem;
-    display: block;
-    padding-bottom: .5rem;
-    color: var(--light-white);
-    animation:fadeIn 1.1s cubic-bezier(0.54, 1.3, 0.63, 1.34) .2s backwards;
-}
-
-
-.home .slide .content h3{
-
-    font-size: 8vw;
-     text-transform: uppercase;
-    color: var(--white);
-    text-shadow: 0 .5rem 1rem rgba(0,0,0,.7);
-    line-height: 1;
-    padding: 2rem 0;
-  /*  animation:fadeIn 1.5s cubic-bezier(0.54, 1.3, 0.63, 1.34) .4s backwards;*/
-
-}
-
-.home .slide .content .btn{
-
-    animation:fadeIn 2.4s cubic-bezier(0.54, 1.3, 0.63, 1.34) .6s backwards;
-
-}
-
-.home .swiper-slide-active .content{
-
-    display: inline-block;
-
-
-}
-
-.swiper-button-next,
-.swiper-button-prev{
-
-    height: 5rem;
-    width: 5rem;
-    line-height: 5rem;
-    background: var(--white);
-    color: var(--black);
-}
-
-.swiper-button-next:hover,
-.swiper-button-prev:hover{
-
-    background: var(--peru);
-    color: var(--white);
-
-
-}
-
-.swiper-button-next::after,
-.swiper-button-prev::after{
-
-    font-size: 2rem;
-}
-
-.about{
-
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    gap:2rem;
-
-}
-
-.about .image{
-
-    flex: 1 1 41rem;
-}
-
-.about .image img{
-
-    width: 100%;
-
-}
-
-
-.about .content{
-
-    flex: 1 1 41rem;
-}
-
-.about .content .title{
-
-    font-size: 4rem;
-    color: var(--black);
-}
-
-.about .content p{
-
-    font-size: 1.7rem;
-    color: var(--light-black);
-    padding: 1rem 0;
-    line-height: 2;
-}
-
-.about .content .icons-container{
-
-    display: flex;
-    flex-wrap: wrap;
-    gap:2rem;
-    margin-top: 3rem;
-
-}
-
-.about .content .icons-container .icons{
-
-    flex:1 1 16rem;
-    text-align: center;
-    background: var(--light-bg);
-    padding: 3rem 2rem;
-}
-
-.about .content .icons-container .icons img{
-
-    height: 5rem;
-}
-
-.about .content .icons-container .icons h3{
-
-   padding-top: 1rem;
-   font-size: 2rem;
-   color: var(---light-black);
-   font-weight: normal;
-}
-
-.food{
-
-    background: var(--light-bg);
-    
-
-}
-
-.food .slide{
-
-    text-align: center;
-    padding: 4rem 2rem;
-    border-radius: .5rem;
-    transform: scale(.9);
-    opacity: .5;
-    margin-bottom: 4rem;
-
-}
-
-.swiper-pagination-bullet-active{
-
-    background: var(--peru);
-}
-
-
-
-.swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal{
-
-    bottom: 0;
-
-}
-
-.food .swiper-slide-active{
- 
-    transform: scale(1);
-    opacity: 1;
-    background: var(--white);
-    box-shadow: var(--box-shadow);
-    border: var(--border);
-}
-
-
-
-.food .slide img{
-
-    height: 25rem;
-    margin-bottom: 1rem;
-
-}
-
-.food .slide h3{
-
-    font-size: 2.5rem;
-    padding: 1rem 0;
-    color: var(--black);
-
-}
-
-.food .slide .price{
-
-    font-size: 2.5rem;
+    .icon-1 img{width: 40vw;
+        margin: 48px;}
+  
+        .separation-line{
+            width: 50%;
+            border-top: 1px solid rgb(142, 142, 142);
+            margin-top: 24px;
+            margin-bottom: 48px;
+        }
      
-    color: var(--peru);
+        p {
+            width: 90%;
+            display: block;
+            font-size: 22px;
+            margin-block-start: 1em;
+            margin-block-end: 1em;
+            margin-inline-start: 0px;
+            margin-inline-end: 0px;
+            unicode-bidi: isolate;
+            line-height: 1.6 ;
+            margin: 24px;
+            text-align: justify;
+        }
 
-}
+        .map-1 img{width: 70vw;
+            margin: 48px;
+            margin-bottom: 120px;}
 
+
+            .foto-1 img{
+                width: 65vw;
+                margin: 36px;
+            }
+
+            .epigr-1{width: 50vw;
+                display: flex;
+                flex-direction: row;
+                margin-top: -36px;
+    
+    
+    }
+            
+            .epigr-1 p{
+                font-size: 18px;
+              font-weight: 500;
+             
+             text-align: center;
+            }
+     
+  }
