--- a/Capitulo-1/CSS/style.css
+++ b/Capitulo-1/CSS/style.css
@@ -286,20 +286,34 @@ p {
     /* Estilos CSS que se aplicarán cuando el ancho de la pantalla
        (o el viewport) sea de 1000 píxeles o más */
   
-    body {
-      width: 100%; 
-      
-       }
+     
 
        .content{
-        width: 100%;
+        width: 90%; 
         display: flex;
         flex-direction: column;
         align-items: center;
         padding: 12px;
+        overflow-x: hidden;
     }
 
-    .icon-1 img{width: 40vw;
+    
+.header{
+    width: 100%;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    
+    box-shadow: var(--box-shadow);
+    position: sticky;
+    top:0;
+    left:0;
+    right: 0;
+    background-color: var(--white);
+    z-index: 1000;
+
+}
+
+    .icon-1 img{width: 50vw;
         margin: 48px;}
   
         .separation-line{
