--- a/Capitulo-1/CSS/style.css
+++ b/Capitulo-1/CSS/style.css
@@ -363,4 +363,14 @@ p {
              text-align: center;
             }
      
+
+
+
+
+            .explic-mapa-3 img{
+                width: 120%;
+                margin-top: 12px;
+                margin-bottom: 24px;
+                 
+            }
   }
