--- a/CSS/style.css
+++ b/CSS/style.css
@@ -559,6 +559,8 @@ a .chapter-container{text-decoration: none;
             margin-top: -48px;
         }
 
+        #menu-btn{padding: 12px;}
+
 }
 
 
