--- a/Capitulo-1/mapas-ampliados/mapas-ampliados/CSS/style.css
+++ b/Capitulo-1/mapas-ampliados/mapas-ampliados/CSS/style.css
@@ -10,10 +10,20 @@
     border: none;
     text-decoration: none;
     transition: all 0.4s cubic-bezier(.43,1.1,0.62,1.08);
-     
+     }
 
-}
+     body{width: 100%;}
 
+     .map-1{
+        width: 100%; 
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 24px; 
+        
+    }
 
 
 @media (max-width: 650px) {
@@ -34,6 +44,7 @@
     }
 
     .map-1 img{width: 96%;
+        height: 100%;
         transform: rotate(90deg);
                 object-fit: contain;} 
 
