--- a/Capitulo-1/mapas-ampliados/mapas-ampliados/CSS/style.css
+++ b/Capitulo-1/mapas-ampliados/mapas-ampliados/CSS/style.css
@@ -27,7 +27,24 @@
         height: auto;
         display: block; /* Necesario para margin: 0 auto; si no usas flex */
         margin: 0 auto; /* Centra la imagen si el contenedor no es flex */
+        z-index: 10;
       }
+
+
+
+      
+         i{font-size: 36px;
+        z-index: 100;
+        text-decoration: none;
+        color:black;
+         
+        }
+
+        .close{position: fixed;
+                margin-top: 2%;
+                margin-left: 4%;}
+
+      
 
 
 @media (max-width: 650px) {
@@ -44,13 +61,27 @@
                     width: 100%;
                     height: 100vh; /* O una altura específica que necesites */
                     background-color: rgba(221, 221, 221, 0.691); /* Para visualizar el contenedor (opcional) */
+                    z-index: 10;
                   }
                 
                   .map-1-center {
                     transform: rotate(90deg);
                     max-width: 90vh; /* Ajusta según necesites */
                     max-height: 90vw; /* Ajusta según necesites */
+                    z-index: 10;
                   }
-     
+
+                  img{ z-index: 10;}
+
+                  i{font-size: 36px;
+                    z-index: 100;
+                    text-decoration: none;
+                    color:black;
+                     
+                    }
+
+                .close{position: fixed;
+                    margin-top: -25%;
+                    margin-left: 18%;}
 
   }
