--- a/Capitulo-1/CSS/style.css
+++ b/Capitulo-1/CSS/style.css
@@ -151,6 +151,12 @@ p {
     margin: 48px;
 }
 
+.foto-35 img{
+    width: 35vw;
+    margin: 48px;
+}
+
+
 .foto-6 img{
     width: 50vw;
     margin-top: 24px;
@@ -175,6 +181,16 @@ p {
 }
 
 .foto-9 img{
+    width: 45vw;
+    margin: 48px;
+}
+
+.foto-10 img{
+    width: 45vw;
+    margin: 48px;
+}
+
+.foto-11 img{
     width: 45vw;
     margin: 48px;
 }
@@ -371,6 +387,7 @@ p {
                 display: flex;
                 flex-direction: row;
                 margin-top: -36px;
+                padding: 12px;
     
     
     }
@@ -385,4 +402,89 @@ p {
             .map-2 img{width: 70vw;
                 margin-top: 72px;
                 margin-bottom: 48px;}
+
+                .foto-2{margin-top: 48px;}
+
+                .foto-2 img{
+                    width: 65vw;
+                    margin: 36px;
+                }
+
+                .foto-3{margin-top: 48px;}
+
+                .foto-3 img{
+                    width: 65vw;
+                    margin: 36px;
+                }
+
+                .foto-4{margin-top: 48px;}
+
+                .foto-4 img{
+                    width: 65vw;
+                    margin: 36px;
+                }
+
+                .foto-5{margin-top: 48px;}
+
+                .foto-5 img{
+                    width: 65vw;
+                    margin: 36px;
+                }
+
+                .separation-line{
+                    width: 50%;
+                    border-top: 1px solid rgb(142, 142, 142);
+                    margin-top: 120px;
+                    margin-bottom: 24px;
+                }
+
+                .foto-35{margin-top: 48px;}
+
+                .foto-35 img{
+                    width: 65vw;
+                    margin: 36px;
+                }
+
+                .explic-mapa-3{
+
+                    width: 124vw;
+                     margin: 12px;
+                    padding: 60px;
+                }
+
+                .foto-7{margin-top: 48px;}
+
+                .foto-7 img{
+                    width: 65vw;
+                    margin: 36px;
+                }
+
+                .foto-8{margin-top: 48px;}
+
+                .foto-8 img{
+                    width: 65vw;
+                    margin: 36px;
+                }
+
+                .foto-9{margin-top: 48px;}
+
+                .foto-9 img{
+                    width: 65vw;
+                    margin: 36px;
+                }
+
+                .foto-10{margin-top: 48px;}
+
+                .foto-10 img{
+                    width: 65vw;
+                    margin: 36px;
+                }
+
+                .foto-11{margin-top: 48px;}
+
+                .foto-11 img{
+                    width: 65vw;
+                    margin: 36px;
+                }
+   
   }
