--- a/Capitulo-1/CSS/style.css
+++ b/Capitulo-1/CSS/style.css
@@ -83,13 +83,22 @@ section{
 .separation-line-red {
      
     width: 54vw;
-    height: 780px;
+    height: 650px;
     border-top: 2px solid rgb(158, 8, 8);
     border-left: 2px solid rgb(158, 8, 8);;
     margin-top: 24px;
     margin-bottom: 48px;
     padding: 24px;
 }
+
+.destacados-titulo{
+    font-size: 44px;
+}
+
+.destacados-autor{
+    font-size: 24px;
+}
+
 
 
 .comments{display: flex;
@@ -634,13 +643,24 @@ p {
                 .separation-line-red {
              
                     width: 70vw;
-                    height: 550px;
+                    height: 600px;
                     border-top: 2px solid rgb(158, 8, 8);
                     border-left: 2px solid rgb(158, 8, 8);;
                     margin-top: 24px;
                     margin-bottom: 48px;
                     padding: 24px;
                 }
+
+                .destacados-titulo{
+                    font-size: 36px;
+                    margin-bottom: 24px;
+                }
+                
+                .destacados-autor{
+                    font-size: 24px;
+                    margin-top: 24px;
+                }
+               
 
                 .foto-35{margin-top: 48px;}
 
@@ -841,7 +861,7 @@ p {
 /*TABLET B*/
 /*TABLET B*/
 
-@media (max-width: 920px) {
+@media (max-width: 820px) {
     /* Estilos CSS que se aplicarán cuando el ancho de la pantalla
        (o el viewport) sea de 1000 píxeles o más */
   
@@ -976,13 +996,24 @@ p {
                 .separation-line-red {
              
                     width: 70vw;
-                    height: 700px;
+                    height: 720px;
                     border-top: 2px solid rgb(158, 8, 8);
                     border-left: 2px solid rgb(158, 8, 8);;
                     margin-top: 24px;
                     margin-bottom: 48px;
                     padding: 24px;
                 }
+
+                .destacados-titulo{
+                    font-size: 28px;
+                    margin-bottom: 24px;
+                }
+                
+                .destacados-autor{
+                    font-size: 22px;
+                    margin-top: 24px;
+                }
+
 
                 .foto-35{margin-top: 48px;}
 
@@ -1257,16 +1288,24 @@ p {
         .separation-line-red {
      
             width: 70vw;
-            height: 1000px;
+            height: 1380px;
             border-top: 2px solid rgb(158, 8, 8);
             border-left: 2px solid rgb(158, 8, 8);;
             margin-top: 24px;
-            margin-bottom: 48px;
+            margin-bottom: 72px;
             padding: 24px;
         }
         
         
-       
+            .destacados-titulo{
+            font-size: 28px;
+            margin-bottom: 24px;
+          }
+
+            .destacados-autor{
+             font-size: 22px;
+             margin-top: 24px;
+            }
 
         .map-1 img{width: 70vw;
             margin-top: 48px;
